# pico-ice

MicroPython/: tinyQV_nanoV.odt
examples-tested-1_6_1/: errors_cmake.txt  tree-081624.txt
firmware-v1.6.1/: notes-compiling-pico-ice-pico-ice-default-v1.6.1.tar.gz.txt
klt-feature-detect/: notes-klt-feature-detect.txt
leddigits/: Makefile  Makefile-OSS  leddigits.pcf  notes-leddigts.txt  notes-openjpeg.txt  time.txt  top.v  top.v-44
myDocs/: built-files.txt  cmds.txt  ethernet-errors.txt  forth-pico-ice.odg  forth-pico-ice.txt  git-merged.txt  ideas_pmod_ethernet_block.txt  manual-cpp.txt  micro-python-uart-echo.txt  nandland-uart.odt  net-errors-040125.txt  net-errors-work_test.c040125.txt  new-issue-repo.txt  notes-PipelineC_pmod-ethernet-jpeg-8x8.txt  notes-PipelineC_pmod-ethernet-jpeg.txt  notes-PipelineC_pmod-ethernet.txt  notes-Xark.txt  notes-dfu-util.txt  notes-pico-ice-1.txt  notes-pico-ice-2.txt  notes-yosys-101424.txt  (+12 more)
pico-ice-video/: CMakeLists.txt  README.md  cmake_cmd_output.txt  fpga.pio  fpga.pio.h  main.cpp  make_output.txt  steps_to_build.txt  tusb_config.h  usb_descriptors.c
pico-ice-video/ice/: constraints.pdc  constraints.sdc  coords.sv  ram.sv  spram.sv  top.sv
pico-ice-video/ice/mandelbrot/: .ng_run_manager.ini  .recovery  mandelbrot_tcl.html  promote.xml
pico-ice-video/ice/mandelbrot/mandelbrot_tcr.dir/: pn240928081403.tcr  pn241002102238.tcr  pn241003133906.tcr  pn241004114221.tcr  pn241004151504.tcr  pn241008133909.tcr
pico-ice-video/ice/mandelbrot/source/impl_1/: makefile  multiplier.sv  renderer.sv  tb_top.cpp  top.sv
(+330 files in other folders)
